{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 19,
  "lineage": "ec3d5128-ef36-bc21-5f40-a4eafaf5a2cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:internet-gateway/igw-0a9f25fe3457e607c",
            "id": "igw-0a9f25fe3457e607c",
            "owner_id": "677776962182",
            "tags": {
              "Name": "ds-eks-cluster"
            },
            "vpc_id": "vpc-0452d2dfb68d91ac5"
          },
          "dependencies": [
            "aws_vpc.ds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:route-table/rtb-08d140b33af7e24a4",
            "id": "rtb-08d140b33af7e24a4",
            "owner_id": "677776962182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9f25fe3457e607c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0452d2dfb68d91ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ds",
            "aws_vpc.ds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07322f5c48dac81fa",
            "route_table_id": "rtb-08d140b33af7e24a4",
            "subnet_id": "subnet-0e68b0eac37405f27"
          },
          "dependencies": [
            "aws_internet_gateway.ds",
            "aws_route_table.ds",
            "aws_subnet.ds",
            "aws_vpc.ds",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54c8ec9afa53f7c",
            "route_table_id": "rtb-08d140b33af7e24a4",
            "subnet_id": "subnet-0a57a47352e80d11f"
          },
          "dependencies": [
            "aws_internet_gateway.ds",
            "aws_route_table.ds",
            "aws_subnet.ds",
            "aws_vpc.ds",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ds-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:security-group/sg-03c99f0490ac818c7",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c99f0490ac818c7",
            "ingress": [],
            "name": "ds-cluster-sg",
            "name_prefix": "",
            "owner_id": "677776962182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ds-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0452d2dfb68d91ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ds-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "189.120.180.110/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3976177532",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c99f0490ac818c7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ds-cluster",
            "aws_vpc.ds",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:subnet/subnet-0e68b0eac37405f27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e68b0eac37405f27",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "677776962182",
            "tags": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0452d2dfb68d91ac5"
          },
          "dependencies": [
            "aws_vpc.ds",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:subnet/subnet-0a57a47352e80d11f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a57a47352e80d11f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "677776962182",
            "tags": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0452d2dfb68d91ac5"
          },
          "dependencies": [
            "aws_vpc.ds",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:677776962182:vpc/vpc-0452d2dfb68d91ac5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3e08e10e3e8ce19",
            "default_route_table_id": "rtb-0af5055812816f2ce",
            "default_security_group_id": "sg-0fb9613babf519a9d",
            "dhcp_options_id": "dopt-2f7c3248",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0452d2dfb68d91ac5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af5055812816f2ce",
            "owner_id": "677776962182",
            "tags": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "ds-eks-node",
              "kubernetes.io/cluster/ds-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}